# company-info-mcp

./: DEVELOPMENT_GUIDE.md  Dockerfile  README.md  env.example  pyproject.toml  pyrightconfig.json  requirements.txt  test_gemini.py
src/: __init__.py  main.py  tools.py
